# chess-club-elo-calculator

./: .gitignore  .placeholder  README.md  STYLEGUIDE.md  TESTS.md  __init__.py  elo_calculator.py  pyproject.toml
configs/: business_config.json  operational_config.json
src/chess_club/: __init__.py  cli.py  config.py  db.py  elo.py  glicko2.py  ranking.py  ratings.py  repo.py  service.py  tournament.py
src/chess_club.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_delete_player.py  test_elo.py  test_matches.py  test_player_games.py  test_ranking_edgecases.py  test_service.py  test_tournament.py
